--- a/css/style.css
+++ b/css/style.css
@@ -577,7 +577,7 @@ nav ul {
   }
   
   .characters img {
-	width: 100px; 
+	/* width: 100px;  */
 	height: 100px;
 	border: 4px solid #fff;
 	border-radius: 50%;
@@ -1013,6 +1013,10 @@ button {
 	.characters {
 		width: 720px;
 	  }
+
+	  .characters img {
+		width: 100px;
+	  }
 	
 	.container-5 h1 {
 		font-size: 60px;
@@ -1118,6 +1122,10 @@ button {
 
 	.characters {
 		width: 960px;
+	  }
+
+	  .characters img {
+		width: 100px;
 	  }
 
 	.grid figure:nth-child(1) figcaption {
