--- a/css/style.css
+++ b/css/style.css
@@ -541,15 +541,15 @@ nav ul {
   /* width is controlled here and in media queries to ensure that there's always an even number of columns (prevents orphans) */
   .characters {
 	display: inline-block;
-	width: 140px;
+	width: 100px;
 	list-style-type: none;
 	margin: 15px -5px 0;
 	padding: 0;
   }
 
-  /* .characters {
-    width: 480px;
-  } */
+  .characters {
+    width: 400px;
+  } 
   
   .characters li {
 	display: inline-block;
@@ -577,7 +577,7 @@ nav ul {
   }
   
   .characters img {
-	/* width: 100px;  */
+	width: 100px;  
 	height: 100px;
 	border: 4px solid #fff;
 	border-radius: 50%;
