--- a/css/style.css
+++ b/css/style.css
@@ -379,11 +379,11 @@ nav ul {
   }
   
   .grid figcaption h3 {
-	font-weight: 700;
+	font-weight: 400;
 	color:  red;
-	margin-left: 10px;
+	margin-bottom: 5px;
 	font-size: calc(.5em + 1.7vw);
-	/* line-height: 1; */
+	/* line-height: 0.3;  */
   }
   
   /* Caption effect */
@@ -440,24 +440,6 @@ nav ul {
 	display: inline-block;
   }
   
-  /* ========= COPYRIGHT ========= */
-  
-  .copyright {
-	color: var(--main-color);
-	text-transform: uppercase;
-	position: absolute;
-	bottom: 0;
-	right: -1.9vw;
-	writing-mode: vertical-rl;
-	font-size: 1.5vw;
-  }
-  
-  /* writing-mode doesn't rotate the copyright symbol */
-  .copyright:before {
-	content: '\00a9';
-	display: inline-block;
-	transform: rotate(90deg);
-  }
 
   :root {
 	--main-color: white;
@@ -843,16 +825,16 @@ button {
   }
   
  
-  .flip-card:hover .flip-card-inner {
-	transform: rotateY(180deg);
-  }
-
-  .flip-card:focus-within .flip-card-inner {
-	transform: rotateY(180deg);
-  }
   
+.flip-card:hover .flip-card-inner,
+.flip-card:focus-within .flip-card-inner,
+.flip-card:active .flip-card-inner,
+.flip-card:focus .flip-card-inner {
+  transform: rotateY(180deg);
+}
 
-  .flip-card-front, .flip-card-back {
+
+.flip-card-front, .flip-card-back {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -890,7 +872,8 @@ button {
   }
   
   input[type=submit] {
-	background-color: #04AA6D;
+	background-color: rgb(0,255,255, 0.7)	
+	;
 	color: black;
 	padding: 12px 20px;
 	border: none;
@@ -1149,7 +1132,7 @@ button {
 	  }
 
 	.flip-card-inner {
-        transition: none;
+        transition: transform none;
     }
 
 	#original:checked ~ .characters [data-teams~="original"] img,
