--- a/css/style.css
+++ b/css/style.css
@@ -236,10 +236,10 @@ nav ul {
 	background: var(--main-color);
 	position: relative;
 	opacity: 0;
-	transition: .2s;
+	/* transition: .2s; */
   
-	/* Fix for Safari 10 */
-	display: flex;
+	/* Fix for Safari 10  */
+	 display: flex;
 	flex-direction: column;
   }
   
