--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,7 @@ nav ul {
 	height: 100%;
 	object-fit: cover;
 	transition: .2s;
-	/* will-change: transform; */
+	will-change: transform;
 	clip-path:
 	  polygon(
 		var(--border-width) var(--border-width),
@@ -259,7 +259,7 @@ nav ul {
 	  );
   
 	/* Fix for Safari 10 */
-	flex-grow: 1;
+	/* flex-grow: 1; */
   }
   
   /* figure:hover img {
