--- a/css/style.css
+++ b/css/style.css
@@ -248,8 +248,8 @@ nav ul {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	transition: .2s;
-	will-change: transform;
+	/* transition: .2s;
+	will-change: transform; */
 	clip-path:
 	  polygon(
 		var(--border-width) var(--border-width),
