--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,9 @@ nav ul {
 .grid {
 	position: relative;
 	display: grid;
+	/* grid-template-columns: 1.167fr 0.45fr .225fr 0.3fr 0.8fr; */
 	grid-template-columns: 1.167fr 0.45fr .225fr 0.3fr 0.8fr;
+	/* grid-template-rows: 0.44fr 0.1875fr 0.4fr .9fr; */
 	grid-template-rows: 0.44fr 0.1875fr 0.4fr .9fr;
 	grid-gap: var(--gutter);
   } 
@@ -235,7 +237,7 @@ nav ul {
 	overflow: hidden;
 	background: var(--main-color);
 	position: relative;
-	opacity: 0;
+	opacity: 1;
 	transition: .2s;
   
 	/* Fix for Safari 10  */
@@ -247,6 +249,7 @@ nav ul {
 	vertical-align: middle;
 	width: 100%;
 	height: 100%;
+	opacity: 1;
 	object-fit: cover;
 	transition: .2s;
 	will-change: transform;
